<resources>
    <string name="app_name">Mi Restaurante</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Cerrar Sesion</string>

    <string name="update_information">Actualizar Informacion</string>
    //facebook
    <string name="FACEBOOK_APP_ID">867850313564529</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">a12621a081e3831d1342d16b60d03a15</string>

    <string name="sign_out">Cerrar Sesion</string>
    <string name="nearby_restaurant">Restaurantes Cercano</string>
    <string name="orden_history">Historial de pedidos</string>
    <string name="update_info">Actualizar información</string>
    <string name="money_sign">Bs</string>
    <string name="our_specialized">Nuestra especializada</string>
</resources>
