<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_restaurant_gray_24dp"
            android:title="@string/nearby_restaurant" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history_gray_24dp"
            android:title="@string/orden_history" />
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_account_circle_gray_24dp"
            android:title="@string/update_info" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_exit_to_app_gray_24dp"
            android:title="@string/sign_out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_sends"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
